--- a/index.html
+++ b/index.html
@@ -323,5 +323,8 @@
 <script src="data.js"></script>
 <script src="index.js"></script>
 
+<script src="vr-mode.js"></script>
+<script src="gaze-hotspot.js"></script>
+
 </body>
 </html>
