--- a/index.html
+++ b/index.html
@@ -297,6 +297,11 @@
   <img class="icon on" src="img/collapse.png">
 </a>
 
+<a href="javascript:void(0)" id="vrModeToggle">
+  <img class="icon off" src="img/vr.png">
+  <img class="icon on" src="img/vr-exit.png">
+</a>
+
 <a href="javascript:void(0)" id="viewUp" class="viewControlButton viewControlButton-1">
   <img class="icon" src="img/up.png">
 </a>
